--- a/style.css
+++ b/style.css
@@ -1,13 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Bree+Serif&family=Caveat:wght@400;700&family=Lobster&family=Monoton&family=Open+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Playfair+Display+SC:ital,wght@0,400;0,700;1,700&family=Playfair+Display:ital,wght@0,400;0,700;1,700&family=Roboto:ital,wght@0,400;0,700;1,400;1,700&family=Source+Sans+Pro:ital,wght@0,400;0,700;1,700&family=Work+Sans:ital,wght@0,400;0,700;1,700&display=swap');
 
 #bg-video {
-     position: absolute; 
-    top: 0;
-    left: 0;
+     height: 100vh;
     width: 100%;
-    height: 100%; 
-    object-fit: cover; 
-    z-index: -1; 
+    background-size: cover;
 }
 
 .he {
