--- a/style.css
+++ b/style.css
@@ -1,10 +1,22 @@
 @import url('https://fonts.googleapis.com/css2?family=Bree+Serif&family=Caveat:wght@400;700&family=Lobster&family=Monoton&family=Open+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Playfair+Display+SC:ital,wght@0,400;0,700;1,700&family=Playfair+Display:ital,wght@0,400;0,700;1,700&family=Roboto:ital,wght@0,400;0,700;1,400;1,700&family=Source+Sans+Pro:ital,wght@0,400;0,700;1,700&family=Work+Sans:ital,wght@0,400;0,700;1,700&display=swap');
 
+#section-main {
+            position: relative;
+            width: 100vw;
+            height: 100vh;
+            overflow: hidden;
+        }
+
 #bg-video {
-     height: 100vh;
+     position: absolute; 
+    top: 0;
+    left: 0;
     width: 100%;
-    background-size: cover;
+    height: 100%; 
+    object-fit: cover; 
+    z-index: -1; 
 }
+
 
 .he {
     position: absolute;
